syntax = "proto3";

package com.kaleris.graphql;

option java_multiple_files = true;
option java_package = "com.kaleris.graphql";

service ProductGrpcService {
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc GetProduct (ProductId) returns (Product);
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc StreamNewProducts (Empty) returns (stream Product);
}

message Empty {}

message ProductId {
  int64 id = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  optional string description = 3;
  double price = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ProductList {
  repeated Product products = 1;
}

message CreateProductRequest {
  string name = 1;
  optional string description = 2;
  double price = 3;
}

message UpdateProductRequest {
  int64 id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double price = 4;
}